build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0049.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0049.html
---
@base <file:///0049.html> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
<http://www.example.org/#me> a foaf:Person ;
	foaf:name "John Doe" .
