build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0053.html-2.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(processor_graph, base.as_str())"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0053.html
---

